--- a/_includes/about.html
+++ b/_includes/about.html
@@ -12,7 +12,7 @@
                     <p>Foodie JDS is a group of passionate foodies whose aim is to share the best food in London to every food lover out there to see!</p>
                 </div>
                 <div class="col-lg-4">
-                    <p>Whether you're an experience Londoner or just planning to visit this amazing city for a few days, make sure to follow us to find out more amazing treats. Stay hungry!</p>
+                    <p>Whether you're an experienced Londoner or just planning to visit this amazing city for a few days, make sure to follow us to discover the most amazing treats. Stay hungry!</p>
                 </div>
                 <div class="col-lg-8 col-lg-offset-2 text-center">
                     <a href="https://github.com/jeromelachaud/freelancer-theme" class="btn btn-lg btn-outline">
