--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -19,7 +19,7 @@
                         <a href="#page-top"></a>
                     </li>
                     <li class="page-scroll">
-                        <a href="#promotions">Promotions</a>
+                        <a href="#portfolio">Promotions</a>
                     </li>
                     <li class="page-scroll">
                         <a href="#about">About</a>
