--- a/_includes/about.html
+++ b/_includes/about.html
@@ -15,9 +15,7 @@
                     <p>Whether you're an experienced Londoner or just planning to visit this amazing city for a few days, make sure to follow us to discover the most delicious treats. Stay hungry!</p>
                 </div>
                 <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <a href="https://github.com/jeromelachaud/freelancer-theme" class="btn btn-lg btn-outline">
-                        <i class="fa fa-download"></i> Download Theme
-                    </a>
+                     <p>We also have experience working with a large range of businesses and restaurants including Papa Johns and Ole & Steen and many others. If you are interested check our different services above.
                 </div>
             </div>
         </div>
