--- a/_includes/about.html
+++ b/_includes/about.html
@@ -14,7 +14,7 @@
                 <div class="col-lg-4">
                     <p>Whether you're an experienced Londoner or just planning to visit this amazing city for a few days, make sure to follow us to discover the most delicious treats. Stay hungry!</p>
                 </div>
-                <div class="col-lg-8 col-lg-offset-2 text-center">
+                <div class="col-lg-4">
                      <p>We also have experience working with a large range of businesses and restaurants including Papa Johns and Ole & Steen and many others. If you are interested check our different services above.
                 </div>
             </div>
