--- a/_includes/about.html
+++ b/_includes/about.html
@@ -15,7 +15,7 @@
                     <p>Whether you're an experienced Londoner or just planning to visit this amazing city for a few days, make sure to follow us to discover the most delicious treats. Stay hungry!</p>
                 </div>
                 <div class="col-lg-4">
-                     <p>We also have experience working with a large range of businesses and restaurants including Papa Johns and Ole & Steen and many others. If you are interested check our different services above.
+                     <p>We have experience working with many businesses and restaurants including Papa Johns and Ole&Steen. If you are interested in working with us, check out our different services above.
                 </div>
             </div>
         </div>
