--- a/_includes/about.html
+++ b/_includes/about.html
@@ -14,7 +14,7 @@
                 <div class="col-lg-4">
                     <p>Whether you're an experienced Londoner or just planning to visit this amazing city for a few days, make sure to follow us to discover the most delicious treats. Stay hungry!</p>
                 </div>
-                <div class="col-lg-4">
+                <div class="col-lg-4 col-lg-offset-2">
                      <p>We have experience working with many businesses and restaurants including Papa Johns and Ole & Steen. If you are interested in working with us, make sure to contact us using the form below.
                 </div>
             </div>
